[project]
name = "fathomnet"
version = "1.7.0"
description = "fathomnet-py is a client-side API to help scientists, researchers, and developers interact with FathomNet data."
license = "MIT"
authors = [
    { name = "Kevin Barnard", email = "kbarnard@mbari.org" }
]
maintainers = [
    { name = "Kevin Barnard", email = "kbarnard@mbari.org" }
]
requires-python = ">= 3.8.1"
dependencies = [
    "dataclasses-json >= 0.5.4",
    "requests >= 2.20.0",
    "lxml >= 4.6.0",
    "coco-lib >= 0.1.2",
    "progressbar2 >= 3.37.0",
    "pyyaml >= 6.0.1",
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
models = [
    "appdirs>=1.4.4",
    "torch>=2.4.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.2",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "torchvision>=0.19.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.66.5",
    "ultralytics>=8.2.79",
    "gitpython>=3.1.43",
]

[project.scripts]
fathomnet-generate = "fathomnet.scripts.fathomnet_generate:main"

[project.urls]
Homepage = "https://fathomnet.org/fathomnet/#/about"
Documentation = "https://fathomnet-py.readthedocs.io"
Repository = "https://github.com/fathomnet/fathomnet-py.git"
Issues = "https://github.com/fathomnet/fathomnet-py/issues"
Changelog = "https://github.com/fathomnet/fathomnet-py/blob/main/CHANGELOG.md"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "sphinx-rtd-theme>=2.0.0",
    "pre-commit>=3.8.0",
    "ruff>=0.6.1",
]

[tool.rye.scripts]
docs = "make -C docs html"

[tool.semantic_release]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fathomnet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
