[metadata]
name = fathomnet
version = 0.0.2
author = Kevin Barnard
author_email = kbarnard@mbari.org
description = FathomNet Python client
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/fathomnet/fathomnet-py
project_urls =
    Bug Tracker = https://github.com/fathomnet/fathomnet-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = fathomnet, fathomnet.api
python_requires = >=3.6
install_requires =
    dataclasses-json >= 0.5.4
    requests ~= 2.26.0
